[tool.poetry]
name = "leap"
version = "0.1.0"
description = ""
authors = ["Wind <xiw2.0@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
xtquant = "^241014.1.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
